option java_package = "com.productfoundry.akka.serialization";

option java_outer_classname = "PersistableProtos";

option optimize_for = SPEED;

message AggregateTag {
    optional string name = 1;
    optional string id = 2;
    optional int64 revision = 3;
}

message CommitHeaders {
    optional int32 serializerId = 1;
    optional bytes headers = 2;
    optional bytes headersManifest = 3;
}

message AggregateEvent {
    optional int32 serializerId = 1;
    optional bytes event = 2;
    optional bytes eventManifest = 3;
}

message AggregateSnapshot {

    message Snapshot {
        optional int32 serializerId = 1;
        optional bytes snapshot = 2;
        optional bytes snapshotManifest = 3;
    }

    optional int64 revision = 1;
    optional Snapshot stateSnapshot = 2;
    optional Snapshot atLeastOnceDeliverySnapshot = 3;
    optional Snapshot reliableEventPublisherSnapshot = 4;
}

message Commit {

    message CommitEntry {
        optional int64 revision = 1;
        optional AggregateEvent event = 2;
    }

    optional AggregateTag tag = 1;
    optional CommitHeaders headers = 2;
    repeated CommitEntry entries = 3;
}

message ConfirmedDelivery {
    optional int64 deliveryId = 1;
}

message DeduplicationEntry {
    optional string deduplicationId = 1;
}

message AggregateEventRecord {
    optional AggregateTag tag = 1;
    optional CommitHeaders headers = 2;
    optional AggregateEvent event = 3;
}

message ConfirmDeliveryRequest {
    optional string target = 1;
    optional int64 deliveryId = 2;
}

message EventPublication {
    optional AggregateEventRecord eventRecord = 1;
    optional ConfirmDeliveryRequest confirmation = 2;
    optional string commander = 3;
}

message ReliableEventPublisherSnapshot {
    optional EventPublication currentPublication = 1;
    repeated EventPublication pendingPublication = 2;
}

message Persistable {
    optional Commit commit = 1;
    optional ConfirmedDelivery confirmedDelivery = 2;
    optional DeduplicationEntry deduplicationEntry = 3;
    optional AggregateEventRecord aggregateEventRecord = 4;
    optional AggregateSnapshot aggregateSnapshot = 5;
    optional ConfirmDeliveryRequest confirmDeliveryRequest = 6;
    optional EventPublication eventPublication = 7;
    optional ReliableEventPublisherSnapshot reliableEventPublisherSnapshot = 8;
}